--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "dev": "react-scripts start",
     "start": "npm run dev",
-    "build": "react-scripts build",
+    "build": "CI=false &&react-scripts build",
     "test": "react-scripts test --env =jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
